--- a/demo.html
+++ b/demo.html
@@ -59,7 +59,7 @@
       <div class="mb-4">
         <h3 class="text-lg font-semibold text-gray-800">B.Tech in Information Technology</h3>
         <p class="text-md text-gray-700 italic">Bannari Amman Institute of Technology, Sathyamangalam</p>
-        <p class="text-sm text-gray-600">2023 – 2027 (Expected) | CGPA: 7.8</p>
+        <p class="text-sm text-gray-600">2023 – 2027  | CGPA: 7.8</p>
       </div>
       <div class="mb-4">
         <h3 class="text-lg font-semibold text-gray-800">12th Grade – State Board</h3>
@@ -95,10 +95,10 @@
       </h2>
       <ul class="list-disc list-inside text-gray-700 space-y-2">
         <li><strong>Programming Languages:</strong> Java, C, C++ (Basics), Python (Basics)</li>
-        <li><strong>Web Technologies:</strong> HTML, CSS, JavaScript, React.js, Tailwind CSS</li>
+        <li><strong>Web Technologies:</strong> HTML, CSS, JavaScript</li>
         <li><strong>Backend:</strong> Node.js, Express.js</li>
         <li><strong>Database:</strong> MongoDB, MySQL</li>
-        <li><strong>Tools & IDEs:</strong> Visual Studio Code, GitHub, Postman</li>
+        <li><strong>Tools & IDEs:</strong> Visual Studio Code</li>
       </ul>
     </section>
 
