--- a/demo.html
+++ b/demo.html
@@ -74,21 +74,32 @@
     </section>
 
     <section class="mb-10">
-      <h2 class="text-xl font-bold text-gray-700 border-b-2 border-gray-300 pb-2 mb-4 uppercase tracking-widest">
-        Projects
-      </h2>
-      <div class="mb-6">
-        <h3 class="text-lg font-semibold text-gray-800">SaveABeat – Online Blood Donation System(working on)</h3>
-        <p class="text-sm italic text-gray-600 mb-2">Tech Stack: MongoDB, Node.js, Express.js, React.js, Tailwind CSS</p>
-        <p class="text-gray-700 leading-relaxed">
-          Developed a full-stack web application to connect blood donors and recipients with geo-fencing alerts and secure user verification. 
-          Focused on backend development using <strong>Node.js</strong> and <strong>MongoDB</strong>, implementing <strong>RESTful APIs</strong> for donor/receiver modules and secure authentication using <strong>JWT</strong> and <strong>bcrypt</strong>. 
-          Designed schemas with <strong>Mongoose</strong> for handling blood requests, hospital inventory updates, and secure document uploads using GridFS. 
-          Integrated real-time donor alerting within a 10 km radius using the Haversine formula and geolocation API.
-        </p>
-      </div>
-    </section>
-
+  <h2 class="text-xl font-bold text-gray-700 border-b-2 border-gray-300 pb-2 mb-4 uppercase tracking-widest">
+    Projects
+  </h2>
+  <div class="mb-6">
+    <h3 class="text-lg font-semibold text-gray-800">SaveABeat – Online Blood Donation System</h3>
+    <p class="text-sm italic text-gray-600 mb-2">Tech Stack: MongoDB, Node.js, Express.js, React.js, Tailwind CSS</p>
+    <p class="text-gray-700 leading-relaxed">
+      Developed a full-stack web platform to connect blood donors and recipients through location-based alerts and secure user verification.
+      Focused on backend architecture using <strong>Node.js</strong> and <strong>MongoDB</strong> to implement RESTful APIs and authentication workflows.
+    </p>
+    <ul class="list-disc list-inside text-gray-700 mt-2 space-y-1">
+      <li>Designed and structured MongoDB schemas for core modules including Users, Blood Requests, and Inventory.</li>
+      <li>Developed admin functionalities to securely manage user roles, approve blood requests, and verify hospital registrations.</li>
+      <li>Implemented a real-time location-based alert system to notify nearby eligible donors.</li>
+      <li>Ensured efficient data operations by managing relationships, indexing, and query optimization in MongoDB.</li>
+      <li>Deployed and tested the application across local and cloud environments to ensure smooth functionality and scalability.</li>
+    </ul>
+  </div>
+  <div>
+    <h3 class="text-lg font-semibold text-gray-800">Online Blood Bank Management System Website</h3>
+    <p class="text-sm italic text-gray-600 mb-2">Tech Stack: Java, HTML, CSS, MySQL, VS Code</p>
+    <p class="text-gray-700 leading-relaxed">
+      Built a web-based Java application to manage blood donation records and automate the process of donor registration, hospital verification, and admin-level approvals. Integrated a structured <strong>MySQL</strong> database for storing donor and request data with role-based access for hospitals and administrators.
+    </p>
+  </div>
+</section>
     <section class="mb-10">
       <h2 class="text-xl font-bold text-gray-700 border-b-2 border-gray-300 pb-2 mb-4 uppercase tracking-widest">
         Key Skills
